<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zwu.dimsumcalculator.MainActivity" >

    <!-- Linear Layout (1) -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/small"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/textView1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/group1Radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:checked="true"
            android:text="@string/num0" />

        <RadioButton
            android:id="@+id/group1Radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num1" />

        <RadioButton
            android:id="@+id/group1Radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num2" />

        <RadioButton
            android:id="@+id/group1Radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num3" />

        <RadioButton
            android:id="@+id/group1Radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num4" />

        <RadioButton
            android:id="@+id/group1Radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num5" />

        <RadioButton
            android:id="@+id/group1Radio6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num6" />

        <RadioButton
            android:id="@+id/group1Radio7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num7" />

        <RadioButton
            android:id="@+id/group1Radio8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num8" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/radioGroup1"
        android:labelFor="@+id/editText1"
        android:text="@string/dollar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/subTotal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Linear Layout (1) END -->


    <!-- Linear Layout (2) -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/radioGroup1"
        android:text="@string/medium"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/textView2"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/group2Radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:checked="true"
            android:text="@string/num0" />

        <RadioButton
            android:id="@+id/group2Radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num1" />

        <RadioButton
            android:id="@+id/group2Radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num2" />

        <RadioButton
            android:id="@+id/group2Radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num3" />

        <RadioButton
            android:id="@+id/group2Radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num4" />

        <RadioButton
            android:id="@+id/group2Radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num5" />

        <RadioButton
            android:id="@+id/group2Radio6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num6" />

        <RadioButton
            android:id="@+id/group2Radio7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num7" />

        <RadioButton
            android:id="@+id/group2Radio8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num8" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/radioGroup2"
        android:labelFor="@+id/editText2"
        android:text="@string/dollar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/subTotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Linear Layout (3) -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/radioGroup2"
        android:text="@string/large"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/textView3"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/group3Radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:checked="true"
            android:text="@string/num0" />

        <RadioButton
            android:id="@+id/group3Radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num1" />

        <RadioButton
            android:id="@+id/group3Radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num2" />

        <RadioButton
            android:id="@+id/group3Radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num3" />

        <RadioButton
            android:id="@+id/group3Radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num4" />

        <RadioButton
            android:id="@+id/group3Radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num5" />

        <RadioButton
            android:id="@+id/group3Radio6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num6" />

        <RadioButton
            android:id="@+id/group3Radio7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num7" />

        <RadioButton
            android:id="@+id/group3Radio8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="@string/num8" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/radioGroup3"
        android:labelFor="@+id/editText3"
        android:text="@string/dollar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/subTotal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Linear Layout (3) for 小点  END -->

    <include layout="@layout/dimsum_special" />

    <include layout="@layout/dimsum_top" />

    <include layout="@layout/dimsum_super" />

    <Button
        android:id="@+id/newOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:text="@string/newOrder" />

    <Button
        android:id="@+id/printOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newOrder"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/newOrder"
        android:text="@string/done" />

    <TextView
        android:id="@+id/grandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="#FFFF00"
        android:labelFor="@+id/editText6"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/printOrder"
        android:layout_alignRight="@+id/radioGroup3"
        android:layout_marginRight="53dp"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
   <!--   <include layout="@layout/dimsum_order_page" />-->

</RelativeLayout>